# LazyLuna

./: .gitignore  ClusteringSegmentationDifferences.ipynb  LL_Polygon.ipynb  Mini_LL.py  README.md  setup.cfg  stress_testing_shapely_pickles.ipynb
Notebooks/: BullseyeTest.csv  CNN_Cases-Copy1.ipynb  CNN_Cases.ipynb  ClusteringSegmentationDifferences.ipynb  EdyJansBullseyeTest.ipynb  EmidecTest.ipynb  Emidec_Converter.ipynb  FFTool.ipynb  Figures4SoftwarePaper.ipynb  FindCSImages.ipynb  ISMRM_Plots.ipynb  ISMRM_interactive_plot_1.py  ISMRM_interactive_plot_2.py  LAX_Atria.ipynb  LAX_Fett.ipynb  LL_Polygon.ipynb  PercentageRasterize.ipynb  T1_mapping_table.ipynb  TestingCS.ipynb  TestingCamaid.ipynb  TestingCamaid_LAX.ipynb  TestingDatabase.ipynb  TestingLGE.ipynb  TestingLoadingImagesAndAnnos.ipynb  TestingMapping.ipynb  TestingTrainees.ipynb  ToyDataLoader.ipynb  Untitled.ipynb  interactive_clustering.py  newClusteringSegmentationDifferences.ipynb  nii_images_reader.ipynb
src/LazyLuna/: Annotation.py  CATCH_utils.py  Categories.py  ClinicalResults.py  Containers.py  Figures.py  Metrics.py  Mini_LL.py  Table.py  Tables.py  Views.py  loading_functions.py  network_comparison_utils.py  utils.py  utils_pyqt5.py
src/LazyLuna/Figures/: Angle_Segment_Comparison.py  Annotation_Comparison.py  Basic_Presenter.py  BlandAltman.py  Boxplot.py  Contour_Comparison_Figure.py  DCMs_list_Annos_Presenter.py  Failed_Annotation_Comparison_Yielder.py  Figures.py  Image_List_Presenter.py  LAXCINE_Confidence_Intervals_Tolerance_Ranges.py  LAX_BlandAltman.py  LAX_Volumes_BlandAltman.py  (+22 more)
(+66 files in other folders)
