[metadata]
name = LazyLuna
version = 0.0.1
author = Thomas Hadler
author_email = thomas.hadler@aol.de
description = LazyLuna
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thadler/LazyLuna
project_urls =
    Bug Tracker = https://github.com/thadler/LazyLuna/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
